--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   font_awesome_flutter: ^10.7.0
   google_fonts: 6.1.0
   go_router: ^13.2.0
+  dartz: ^0.10.1
 
 dev_dependencies:
   flutter_test:
