--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,8 +40,13 @@ dependencies:
   go_router: ^13.2.0
   dartz: ^0.10.1
   dio: ^5.7.0
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+
 
 dev_dependencies:
+  hive_generator: ^2.0.1
+  build_runner: ^2.4.9
   flutter_test:
     sdk: flutter
 
