--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   flutter_bloc: ^8.1.6
   get_it: ^8.0.2
   cached_network_image: ^3.3.1
+  url_launcher: ^6.2.4
 
 
 dev_dependencies:
